src/parse/parse.output
Grammar

    0 $accept: grammar $end

    1 grammar: grammar rule
    2        | rule

    3 rule: token_rule ';'
    4     | sentence_rule ';'

    5 token_rule: id '=' regex
    6           | id '=' sentence_decl
    7           | '~' id '=' regex
    8           | '~' id '=' sentence_decl

    9 sentence_rule: id ':' sentence_decl

   10 sentence_decl: sentence_decl '|' sentence_branch
   11              | sentence_branch

   12 sentence_branch: sentence_branch sentence_part
   13                | sentence_part

   14 sentence_part: sentence_unary sentence_decorate sentence_repeatition
   15              | sentence_unary sentence_repeatition
   16              | sentence_unary sentence_decorate
   17              | sentence_unary

   18 sentence_unary: id
   19               | string
   20               | '(' sentence_branch ')'

   21 sentence_decorate: '!'

   22 sentence_repeatition: '*'
   23                     | '+'
   24                     | '?'

   25 id: ID

   26 string: STRING

   27 regex: REGEX


Terminals, with rules where they appear

$end (0) 0
'!' (33) 21
'(' (40) 20
')' (41) 20
'*' (42) 22
'+' (43) 23
':' (58) 9
';' (59) 3 4
'=' (61) 5 6 7 8
'?' (63) 24
'|' (124) 10
'~' (126) 7 8
error (256)
ID (258) 25
STRING (259) 26
REGEX (260) 27


Nonterminals, with rules where they appear

$accept (17)
    on left: 0
grammar (18)
    on left: 1 2, on right: 0 1
rule (19)
    on left: 3 4, on right: 1 2
token_rule (20)
    on left: 5 6 7 8, on right: 3
sentence_rule (21)
    on left: 9, on right: 4
sentence_decl (22)
    on left: 10 11, on right: 6 8 9 10
sentence_branch (23)
    on left: 12 13, on right: 10 11 12 20
sentence_part (24)
    on left: 14 15 16 17, on right: 12 13
sentence_unary (25)
    on left: 18 19 20, on right: 14 15 16 17
sentence_decorate (26)
    on left: 21, on right: 14 16
sentence_repeatition (27)
    on left: 22 23 24, on right: 14 15
id (28)
    on left: 25, on right: 5 6 7 8 9 18
string (29)
    on left: 26, on right: 19
regex (30)
    on left: 27, on right: 5 7


State 0

    0 $accept: . grammar $end

    ID   shift, and go to state 1
    '~'  shift, and go to state 2

    grammar        go to state 3
    rule           go to state 4
    token_rule     go to state 5
    sentence_rule  go to state 6
    id             go to state 7


State 1

   25 id: ID .

    $default  reduce using rule 25 (id)


State 2

    7 token_rule: '~' . id '=' regex
    8           | '~' . id '=' sentence_decl

    ID  shift, and go to state 1

    id  go to state 8


State 3

    0 $accept: grammar . $end
    1 grammar: grammar . rule

    $end  shift, and go to state 9
    ID    shift, and go to state 1
    '~'   shift, and go to state 2

    rule           go to state 10
    token_rule     go to state 5
    sentence_rule  go to state 6
    id             go to state 7


State 4

    2 grammar: rule .

    $default  reduce using rule 2 (grammar)


State 5

    3 rule: token_rule . ';'

    ';'  shift, and go to state 11


State 6

    4 rule: sentence_rule . ';'

    ';'  shift, and go to state 12


State 7

    5 token_rule: id . '=' regex
    6           | id . '=' sentence_decl
    9 sentence_rule: id . ':' sentence_decl

    '='  shift, and go to state 13
    ':'  shift, and go to state 14


State 8

    7 token_rule: '~' id . '=' regex
    8           | '~' id . '=' sentence_decl

    '='  shift, and go to state 15


State 9

    0 $accept: grammar $end .

    $default  accept


State 10

    1 grammar: grammar rule .

    $default  reduce using rule 1 (grammar)


State 11

    3 rule: token_rule ';' .

    $default  reduce using rule 3 (rule)


State 12

    4 rule: sentence_rule ';' .

    $default  reduce using rule 4 (rule)


State 13

    5 token_rule: id '=' . regex
    6           | id '=' . sentence_decl

    ID      shift, and go to state 1
    STRING  shift, and go to state 16
    REGEX   shift, and go to state 17
    '('     shift, and go to state 18

    sentence_decl    go to state 19
    sentence_branch  go to state 20
    sentence_part    go to state 21
    sentence_unary   go to state 22
    id               go to state 23
    string           go to state 24
    regex            go to state 25


State 14

    9 sentence_rule: id ':' . sentence_decl

    ID      shift, and go to state 1
    STRING  shift, and go to state 16
    '('     shift, and go to state 18

    sentence_decl    go to state 26
    sentence_branch  go to state 20
    sentence_part    go to state 21
    sentence_unary   go to state 22
    id               go to state 23
    string           go to state 24


State 15

    7 token_rule: '~' id '=' . regex
    8           | '~' id '=' . sentence_decl

    ID      shift, and go to state 1
    STRING  shift, and go to state 16
    REGEX   shift, and go to state 17
    '('     shift, and go to state 18

    sentence_decl    go to state 27
    sentence_branch  go to state 20
    sentence_part    go to state 21
    sentence_unary   go to state 22
    id               go to state 23
    string           go to state 24
    regex            go to state 28


State 16

   26 string: STRING .

    $default  reduce using rule 26 (string)


State 17

   27 regex: REGEX .

    $default  reduce using rule 27 (regex)


State 18

   20 sentence_unary: '(' . sentence_branch ')'

    ID      shift, and go to state 1
    STRING  shift, and go to state 16
    '('     shift, and go to state 18

    sentence_branch  go to state 29
    sentence_part    go to state 21
    sentence_unary   go to state 22
    id               go to state 23
    string           go to state 24


State 19

    6 token_rule: id '=' sentence_decl .
   10 sentence_decl: sentence_decl . '|' sentence_branch

    '|'  shift, and go to state 30

    $default  reduce using rule 6 (token_rule)


State 20

   11 sentence_decl: sentence_branch .
   12 sentence_branch: sentence_branch . sentence_part

    ID      shift, and go to state 1
    STRING  shift, and go to state 16
    '('     shift, and go to state 18

    $default  reduce using rule 11 (sentence_decl)

    sentence_part   go to state 31
    sentence_unary  go to state 22
    id              go to state 23
    string          go to state 24


State 21

   13 sentence_branch: sentence_part .

    $default  reduce using rule 13 (sentence_branch)


State 22

   14 sentence_part: sentence_unary . sentence_decorate sentence_repeatition
   15              | sentence_unary . sentence_repeatition
   16              | sentence_unary . sentence_decorate
   17              | sentence_unary .

    '!'  shift, and go to state 32
    '*'  shift, and go to state 33
    '+'  shift, and go to state 34
    '?'  shift, and go to state 35

    $default  reduce using rule 17 (sentence_part)

    sentence_decorate     go to state 36
    sentence_repeatition  go to state 37


State 23

   18 sentence_unary: id .

    $default  reduce using rule 18 (sentence_unary)


State 24

   19 sentence_unary: string .

    $default  reduce using rule 19 (sentence_unary)


State 25

    5 token_rule: id '=' regex .

    $default  reduce using rule 5 (token_rule)


State 26

    9 sentence_rule: id ':' sentence_decl .
   10 sentence_decl: sentence_decl . '|' sentence_branch

    '|'  shift, and go to state 30

    $default  reduce using rule 9 (sentence_rule)


State 27

    8 token_rule: '~' id '=' sentence_decl .
   10 sentence_decl: sentence_decl . '|' sentence_branch

    '|'  shift, and go to state 30

    $default  reduce using rule 8 (token_rule)


State 28

    7 token_rule: '~' id '=' regex .

    $default  reduce using rule 7 (token_rule)


State 29

   12 sentence_branch: sentence_branch . sentence_part
   20 sentence_unary: '(' sentence_branch . ')'

    ID      shift, and go to state 1
    STRING  shift, and go to state 16
    '('     shift, and go to state 18
    ')'     shift, and go to state 38

    sentence_part   go to state 31
    sentence_unary  go to state 22
    id              go to state 23
    string          go to state 24


State 30

   10 sentence_decl: sentence_decl '|' . sentence_branch

    ID      shift, and go to state 1
    STRING  shift, and go to state 16
    '('     shift, and go to state 18

    sentence_branch  go to state 39
    sentence_part    go to state 21
    sentence_unary   go to state 22
    id               go to state 23
    string           go to state 24


State 31

   12 sentence_branch: sentence_branch sentence_part .

    $default  reduce using rule 12 (sentence_branch)


State 32

   21 sentence_decorate: '!' .

    $default  reduce using rule 21 (sentence_decorate)


State 33

   22 sentence_repeatition: '*' .

    $default  reduce using rule 22 (sentence_repeatition)


State 34

   23 sentence_repeatition: '+' .

    $default  reduce using rule 23 (sentence_repeatition)


State 35

   24 sentence_repeatition: '?' .

    $default  reduce using rule 24 (sentence_repeatition)


State 36

   14 sentence_part: sentence_unary sentence_decorate . sentence_repeatition
   16              | sentence_unary sentence_decorate .

    '*'  shift, and go to state 33
    '+'  shift, and go to state 34
    '?'  shift, and go to state 35

    $default  reduce using rule 16 (sentence_part)

    sentence_repeatition  go to state 40


State 37

   15 sentence_part: sentence_unary sentence_repeatition .

    $default  reduce using rule 15 (sentence_part)


State 38

   20 sentence_unary: '(' sentence_branch ')' .

    $default  reduce using rule 20 (sentence_unary)


State 39

   10 sentence_decl: sentence_decl '|' sentence_branch .
   12 sentence_branch: sentence_branch . sentence_part

    ID      shift, and go to state 1
    STRING  shift, and go to state 16
    '('     shift, and go to state 18

    $default  reduce using rule 10 (sentence_decl)

    sentence_part   go to state 31
    sentence_unary  go to state 22
    id              go to state 23
    string          go to state 24


State 40

   14 sentence_part: sentence_unary sentence_decorate sentence_repeatition .

    $default  reduce using rule 14 (sentence_part)
